--- a/WhatShouldITestTests/WhatShouldITestTests.csproj
+++ b/WhatShouldITestTests/WhatShouldITestTests.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="coverlet.collector" Version="1.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ClassLibrary1\WhatShouldITest.csproj" />
+  </ItemGroup>
+
 </Project>
