--- a/GettingStartedWithInterfacesAndMocksTests/GettingStartedWithInterfacesAndMocksTests.csproj
+++ b/GettingStartedWithInterfacesAndMocksTests/GettingStartedWithInterfacesAndMocksTests.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="coverlet.collector" Version="1.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GettingStartedWithInterfacesAndMocks\GettingStartedWithInterfacesAndMocks.csproj" />
+  </ItemGroup>
+
 </Project>
